--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 		<div class="row message">
 			<div class="col-md-12">
 				<p>Halo Sulistia</p>
-				<p>Today is...</p>
-				<p>as beautiful as other days</p>
-				<p>but you realize</p>
+				<p>Hari ini adalah hari</p>
+				<p>yang sangat spesial</p>
+				<p>hari di mana seseorang</p>
 				<p>another year has gone</p>
 				<p>in a blink of the eyes</p>
 				<p><strong>however</strong></p>
