--- a/index.html
+++ b/index.html
@@ -107,54 +107,34 @@
 		</div>
 		<div class="row message">
 			<div class="col-md-12">
-				<p>Halo Sulistia</p>
+				<p>Halo, Sulistia!</p>
 				<p>Hari ini adalah hari</p>
 				<p>yang sangat spesial</p>
 				<p>hari di mana seseorang</p>
-				<p>another year has gone</p>
-				<p>in a blink of the eyes</p>
-				<p><strong>however</strong></p>
-				<p>Do you know..?</p>
-				<p>today is just special</p>
-				<p>so special to you</p>
-				<p>that's why</p>
-				<p>Let's make it...</p>
-				<p>the best celebration ever</p>
-				<p>and let me share...</p>
-				<p>a piece of happiness to you</p>
-				<p>I made all this...</p>
-				<p>as a birthday present to you</p>
-				<p>thanks for being there</p>
-				<p>thanks for the friendship we made</p>
-				<p>thanks for everything</p>
-				<p>I wish you all the best</p>
-				<p>May your life be at ease</p>
-				<p>May all your wishes come true</p>
-				<p>Remember</p>
-				<p>your ambitions</p>
-				<p>you live as a free bird...</p>
-				<p>flying in the blue sky</p>
-				<p>Now things are different...</p>
-				<p>real story of your life</p>
-				<p>is just about to begin</p>
-				<p>indeed..</p>
-				<p>but...</p>
-				<p>don't worry</p>
-				<p>because...</p>
-				<p>God has your back</p>
-				<p>and</p>
-				<p>this year will be better</p>
-				<p>and I hope</p>
-				<p>you'll find...</p>
-				<p>happiness along the way</p>
-				<p>keep your spirit up</p>
-				<p>enjoy every single moment...</p>
-				<p>that you experience today</p>
-				<p>fill it with your most beautiful smile</p>
-				<p>and make it the best memory..</p>
-				<p>lastly...</p>
-				<p>I'd like to wish you one more time</p>
-				<p>a very happy birthday Sulistia</p>
+				<p>yang sangat berarti</p>
+				<p>dalam hidupku lahir ke dunia.</p>
+				<p>Selamat ulang tahun, Sayang!</p>
+				<p>Semoga Allah subhanahu wa ta'ala</p>
+				<p>selalu melimpahkan kesehatan</p>
+				<p>kebahagiaan, kesuksesan</p>
+				<p>kerbekahan, rezeki</p>
+				<p>Semoga segala impian</p>
+				<p>dan harapanmu terwujud.</p>
+				<p>Satu lagi</p>
+				<p>Semoga Allah mudahkan</p>
+				<p>jalan kita berdua</p>
+				<p>untuk menikah tahun ini ya hehe</p>
+				<p>Terima kasih telah </p>
+				<p>mempercantik dunia</p>
+				<p>dengan keberadaanmu</p>
+				<p>dan memberikan </p>
+				<p>makna lebih dalam</p>
+				<p>kehidupanku</p>
+				<p>Aku mencintaimu</p>
+				<p>selamat ulang tahun, sayang!</p>
+				<p>Gausah nanya umur</p>
+				<p>Umur kita sekarang</p>
+				<p>beda wkwk</p>
 			</div>
 		</div>
 		<div class="navbar navbar-fixed-bottom">
